--- a/manifest.json
+++ b/manifest.json
@@ -2,7 +2,7 @@
   "name": "倒计时",
   "short_name": "计时器",
   "start_url": ".",
-  "display": " fullscreen",
+  "display": "standalone",
   "background_color": "#000000",
   "theme_color": "#000000",
   "icons": [
